Fix incorrect delete pipeline API parameter
